# orion-ai-v2.0-backend-vb-iteration-2-gpt-5

./: README.md  alembic.ini  pyproject.toml
alembic/: README  env.py
alembic/versions/: 000000000002_init_datasets.py  000000000003_init_ai_models.py  000000000004_init_agent_tools.py  000000000005_init_agents.py  000000000006_init_agent_networks.py  000000000007_init_chatbots.py  000000000008_init_chat_threads.py  000000000009_add_tenant_id_to_chat_thread.py  000000000010_add_tenant_id_to_chat_message.py  acec4b03af03_sync_chatbots_models_after_env_fix.py  f9c0cc3f5321_init_datasources.py
app/: main.py
app/agent_networks/: __init__.py  controllers.py  exceptions.py  models.py  schemas.py  services.py
app/agent_tools/: __init__.py  controllers.py  exceptions.py  models.py  schemas.py  services.py
app/agents/: controllers.py  dependencies.py  exceptions.py  models.py  schemas.py  services.py
app/ai_models/: __init__.py  controllers.py  exceptions.py  models.py  schemas.py  services.py  utils.py
app/chatbots/: __init__.py  controllers.py  exceptions.py  models.py  schemas.py  services.py
app/core/: config.py  database.py  exceptions.py  security.py
app/datasets/: controllers.py  dependencies.py  exceptions.py  models.py  rls.py  schemas.py  services.py  utils.py
app/datasources/: models.py  (+5 more)
requirements/: agent_networks_requirements.mdc  agent_tools_requirements.mdc  agents_requirements.mdc  ai_models_requirements.mdc  chatbots_requirements.mdc  datasets_requirements.mdc  datasources_requirements.mdc  high_level_requirements.mdc  project_structure.mdc
(+18 files in other folders)
