[project]
name = "orion-ai-v2.0-backend"
version = "0.1.0"
description = "Orion AI Platform Backend (skeleton)"
authors = [
    {name = "Orion Team",email = "devnull@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "pydantic (>=2.7,<3.0)",
    "sqlalchemy (>=2.0,<3.0)",
    "pydantic-settings (>=2.2,<3.0)",
    "cryptography (>=41,<44)",
    "psycopg[binary] (>=3.1,<4.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "httpx (>=0.27,<0.28)",
    "pinecone (>=3.0.0,<6.0.0)"
]

[tool.alembic]
script_location = "alembic"

[tool.poetry]
packages = [{include = "app"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
